ionic native added

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -7,10 +7,10 @@
 <ion-content class="home">
   <ion-card>
     <ion-card-header>
-      Card Header
+      Native Camera Function
     </ion-card-header>
     <ion-card-content>
-      Hello World
+      <button>Camera</button>
     </ion-card-content>
   </ion-card>
 </ion-content>
