--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,16 +1,10 @@
-<ion-navbar *navbar>
-  <ion-title>
-    Home
-  </ion-title>
-</ion-navbar>
-
 <ion-content class="home">
   <ion-card>
     <ion-card-header>
       Native Camera Function
     </ion-card-header>
     <ion-card-content>
-      <button>Camera</button>
+      <button (click)="nativeCamera()">Camera</button>
     </ion-card-content>
   </ion-card>
 </ion-content>
